--- a/pom.xml
+++ b/pom.xml
@@ -2,21 +2,34 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
+	
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.6.0</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.pruebas.ecommerce</groupId>
-	<artifactId>Spring-ecomerce</artifactId>
+
+	<groupId>.com.dariorucker</groupId>
+	<artifactId>Login-with-SpringBoot</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>Spring-ecomerce</name>
+	<name>Login-with-SpringBoot</name>
 	<description>Practicas de Spring con un proyecto basico de ecommerce</description>
+
 	<properties>
 		<java.version>11</java.version>
+		    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		
 	</properties>
 	<dependencies>
+	
+	<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
+	
+	
+	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -58,3 +71,6 @@
 	</build>
 
 </project>
+
+
+
