--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,31 +1,18 @@
-#Data source
-
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-#url donde esta el servicio del sql y nombre de la base de datos
-#spring.datasource.url=jdbc:mysql://localhost3307/login_with_springboot
-#spring.datasource.url=jdbc:mysql://localhost:3307/ecommerce
-
-#Usuario y contraseña
-#spring.datasource.username=root
-#spring.datasource.password=
-
-#Imprime por consola las instrucciones hechas a la base de datos
-#spring.jpa.show-sql= true
-
-#[Opcional] crear las tablas
-#spring.jpa.hibernate.ddl-auto=create
-
+#Data source 
+#Indica el driver/lib para conectar java a mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#Url donde esta el servicio de tu mysql y el nombre de la base de datos
 spring.datasource.url=jdbc:mysql://localhost:3307/login_with_springboot
+
+#Usuario y contrasena para tu base de datos descrita en la linea anterior
 spring.datasource.username=root
 spring.datasource.password=
 
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-#logging.level.org.hibernate.SQL=DEBUG
+#[Opcional]Imprime en tu consola las instrucciones hechas en tu base de datos.
+spring.jpa.show-sql = true
 
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+#[Opcional]Crea las tablas.
+spring.jpa.hibernate.ddl-auto=update
+
 
